/*
 * Copyright (C) 2022 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/routr
 *
 * This file is part of Routr
 *
 * Licensed under the MIT License (the "License");
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.routr.requester.v2draft1;

option java_multiple_files = true;
option java_package = "io.routr.requester";
option java_outer_classname = "RequesterProto";
option objc_class_prefix = "RP";

import "common.proto";
import "sipmessage.proto";
import "processor.proto";

// Requester service
service Requester {
  // Send Message Request
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
}

message SendMessageRequest {
  string target = 1;
  fonoster.routr.processor.v2draft1.Method method = 2;
  fonoster.routr.common.v2draft1.Transport transport = 3;
  fonoster.routr.sipmessage.v2draft1.SIPMessage message = 4;
}

message SendMessageResponse {
  fonoster.routr.sipmessage.v2draft1.SIPMessage message = 1;
}
